# AutoContext

./: .env  .env.swp  Dockerfile  README.md  app.py  cert.pem  client.py  common.py  config.json  key.pem  local_db  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  slack_integration.py
shower/: _transcriber.py  app.py  common.py  config.json  credentials.json  embedding.py  llm_zephyr.py  package.json  scraper.py  token.json  tts.py
shower/frontend/: app.jsx  processor.js  recorder-node.js
static/: main.js
