[tool.poetry]
name = "Hackathon"
version = "0.1.0"
description = ""
authors = ["Emmet Jao <ejao1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
anthropic = "^0.21.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

